hcaptcha_derive/tests/compile_fail/no_field_enum.rs
use hcaptcha_derive::Hcaptcha;

#[derive(Hcaptcha)]
pub enum ContactEnum {
    Name,
    Token,
}

fn main() {
    println!("hello");
}
