hcaptcha_derive/tests/compile_fail/no_field_enum.stderr
error: Must derive on a struct

         = help: This macro can only be implemented on a struct.

               #[derive(Hcaptcha)]
               struct MyStruct {
                   #[captcha]
                   hcaptcha: String,
               }

 --> tests/compile_fail/no_field_enum.rs:4:10
  |
4 | pub enum ContactEnum {
  |          ^^^^^^^^^^^
